--- a/src/pages/my/video-record/record-item/record-item.component.css
+++ b/src/pages/my/video-record/record-item/record-item.component.css
@@ -9,3 +9,19 @@
     border-radius: 34px;
     border: 2px solid #067252;
 }
+.title{
+    left: 200px;
+    top: 40px;
+    width: 470px;
+    color: #ff7519;
+    font-size: 30px;
+    font-weight: 600;
+}
+.create{
+    left: 200px;
+    top: 90px;
+    width: 300px;
+    color: black;
+    font-size: 25px;
+    font-weight: 600;
+}
