--- a/src/service/ui/bottom-bar/bottom-bar.component.html
+++ b/src/service/ui/bottom-bar/bottom-bar.component.html
@@ -4,12 +4,16 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-06 11:27:57
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-10 16:05:52
+ * @LastEditTime: 2021-11-09 16:14:41
 -->
 <div class="bottom_bar">
   <app-image [imgData]="bottomBg"></app-image>
   <app-image-button [imgData]="home" (itemClick)="gotoLobby()"></app-image-button>
   <app-image-button [imgData]="shop" (itemClick)="gotoBank()"></app-image-button>
-  <app-image [imgData]="rank"></app-image>
+  <app-image-button [imgData]="price" (itemClick)="gotoBank()"></app-image-button>
   <app-image-button [imgData]="my" (itemClick)="gotoUserCenter()" ></app-image-button>
+  <app-image-button [imgData]="homeIcon"></app-image-button>
+  <app-image-button [imgData]="shopIcon"></app-image-button>
+  <app-image-button [imgData]="priceIcon"></app-image-button>
+  <app-image-button [imgData]="myIcon"></app-image-button>
 </div>
