--- a/src/pages/prize/prize.component.html
+++ b/src/pages/prize/prize.component.html
@@ -4,25 +4,22 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-09 16:34:24
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-09 16:38:01
+ * @LastEditTime: 2021-11-09 17:22:16
 -->
 <div class="stretchingBg widthApp" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <div class="prizeListContainer" [style.height]="pageHeight - 220 + 'px'"></div>
   <div *ngIf="showPrize">
-    <app-order-list [listHeight]="pageHeight - 350" [listData]="orderProgressList" [textureData]="textureData"></app-order-list>
-    <div *ngIf="!orderProgressList.length">
+    <app-order-list [listHeight]="pageHeight - 350" [listData]="prizeList" [textureData]="textureData"></app-order-list>
+    <div *ngIf="!prizeList.length">
       <div class="noOrder">No Prize Won Yet</div>
       <app-image [imgData]="shocked"></app-image>
     </div>
-    <app-image [imgData]="progressIcon"></app-image>
-    <app-image-button [imgData]="compBtn" (itemClick)="changeList()"></app-image-button>
+    <app-image [imgData]="allPrizeIcon"></app-image>
+    <app-image-button [imgData]="packageBtn" (itemClick)="switchPannel( false )"></app-image-button>
   </div>
   <div *ngIf="!showPrize">
-    <app-order-list [listHeight]="pageHeight - 350" [listData]="orderCompleteList" [textureData]="textureData"></app-order-list>
-    <div *ngIf="!orderCompleteList.length">
-      
-    </div>
-    <app-image-button [imgData]="progressBtn" (itemClick)="changeList()"></app-image-button>
-    <app-image [imgData]="compIcon"></app-image>
+    <app-image-button [imgData]="allPrizeBtn" (itemClick)="switchPannel( true )"></app-image-button>
+    <app-image [imgData]="packageIcon"></app-image>
+    <app-image-button [imgData]="addBtn" (itemClick)="addOrder()"></app-image-button>
   </div>
 </div>
