--- a/src/popups/Logout/Logout.component.html
+++ b/src/popups/Logout/Logout.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-22 15:18:17
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-22 16:53:30
+ * @LastEditTime: 2021-12-31 16:07:33
 -->
-<div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
