--- a/src/popups/delete-address/delete-address.component.html
+++ b/src/popups/delete-address/delete-address.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-03 17:37:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-08 14:16:04
+ * @LastEditTime: 2021-12-31 16:07:05
 -->
-<div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <div class="confirmText">Do you want to delete this address?</div>
