--- a/src/popups/exchange/exchange.component.html
+++ b/src/popups/exchange/exchange.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-11 10:38:52
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-11 11:37:24
+ * @LastEditTime: 2021-12-31 16:07:12
 -->
-<div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
