--- a/src/popups/generic-popup/generic-popup.component.html
+++ b/src/popups/generic-popup/generic-popup.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-15 11:33:18
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-23 10:49:39
+ * @LastEditTime: 2021-12-31 16:20:41
 -->
-<div class="generic_po" [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image [imgData]="titleBg"></app-image>
