--- a/src/popups/get-vip/get-vip.component.html
+++ b/src/popups/get-vip/get-vip.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-25 16:09:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-25 16:17:58
+ * @LastEditTime: 2021-12-31 16:07:28
 -->
-<div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
