--- a/src/popups/miss-address-info/miss-address-info.component.html
+++ b/src/popups/miss-address-info/miss-address-info.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-08 15:18:47
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-08 15:22:10
+ * @LastEditTime: 2021-12-31 16:07:37
 -->
-<div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
     <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
     <app-image [imgData]="popupBg"></app-image>
     <div class="confirmText">Please fill in your {{tipString}}</div>
