--- a/src/popups/purchase-success/purchase-success.component.html
+++ b/src/popups/purchase-success/purchase-success.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-22 17:57:16
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-23 11:34:16
+ * @LastEditTime: 2021-12-31 16:07:46
 -->
-<div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image-rotating [imgData]="light"></app-image-rotating>
   <app-image [imgData]="popupBg"></app-image>
