--- a/src/popups/result/result-failed/result-failed.component.html
+++ b/src/popups/result/result-failed/result-failed.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-10-26 13:04:43
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-10-26 15:48:37
+ * @LastEditTime: 2021-12-31 16:07:51
 -->
-<div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
