--- a/src/popups/video-error/video-error.component.html
+++ b/src/popups/video-error/video-error.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-12-27 16:16:41
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-12-27 16:20:51
+ * @LastEditTime: 2021-12-31 16:08:00
 -->
-<div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
+<div [ngStyle]="styles.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image [imgData]="popupBg"></app-image>
   <div class="confirmText">{{tipString}}</div>
