--- a/src/pages/video/video/video.component.html
+++ b/src/pages/video/video/video.component.html
@@ -4,14 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-08 17:11:10
+ * @LastEditTime: 2021-12-31 16:47:48
 -->
-<div class="videoFrameContainer">
+<div [ngStyle]="styles.videoFrameContainer">
     <iframe src="assets/video/video.html" height="{{iframeHeight}}" id="videoFrame" class="videoFrame widthApp" scrolling="no"></iframe>
 </div>
 <app-image-scale-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-scale-button>
-<div class="playerHead">
-    <img [src]="userHeadIcon" class="playingUser"/>
+<div class="playerHead" [ngStyle]="styles.playerHead">
+    <img [src]="userHeadIcon" [ngStyle]="styles.playingUser"/>
     <app-text-field [positionRect]="viewRect" [text]="usersCountText" [color]="textColor" [size]="textSize"></app-text-field>
 </div>
 <app-control-bar [textureData]="textureData" [productData]="data" (videoToggle)="onVideoToggle()" 
