--- a/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
+++ b/src/pages/my/contact-us/contact-scroll/contact-scroll.component.html
@@ -4,14 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-11-04 16:02:21
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-11-05 14:51:55
+ * @LastEditTime: 2022-01-05 11:47:15
 -->
 <div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
   <div class="scrollArea" [style.top]="scrollY + 'px'">
     <app-image [imgData]="title"></app-image>
     <app-scroll-list-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-scroll-list-button>
     <form>
-      <div class="leftText">
+      <div [ngStyle]="styles.leftText">
         <app-popup-text-field [textData]="emailText" [text]="'Email'"></app-popup-text-field>
         <app-popup-text-field [textData]="nameText" [text]="'Name'"></app-popup-text-field>
         <app-scroll-text-input [imgData]="inputBg1" [inputRect]="inputRect" [fontSize]="35" [defautText]="'email'" [text]="emailAddress" (textChange)="emailChange($event)"></app-scroll-text-input>
